# mesagrid

./: README.md  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/database/: connection.rs  credentials.rs  mod.rs  types.rs
src/components/: welcome-screen.tsx
src/components/connections/: connection-dialog.tsx
src/components/layout/: sidebar.tsx
src/components/query-editor/: query-editor.tsx
src/lib/: api.ts
src/stores/: connection-store.ts
